--- a/src/fe/pages/game-layout.css
+++ b/src/fe/pages/game-layout.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   padding: 0.3cqw 2cqw;
+  margin-bottom: 1.5vh;
   flex-shrink: 0;
 }
 
